--- a/pom.xml
+++ b/pom.xml
@@ -42,16 +42,17 @@
 
   </dependencyManagement>
 
-  <!-- Spring Bood Dependencies -->
+  <!-- Spring Boot Dependencies -->
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -59,6 +60,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
 <!-- JavaFX -->
@@ -97,7 +102,7 @@
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
-      <version> 3.0</version>
+      <version>2.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -124,12 +129,17 @@
     </dependency>
 
 
-
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version> 1.18.38</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.1.0</version>
     </dependency>
 
     <dependency>
@@ -148,7 +158,7 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
-
+      <version>${mockito.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -174,6 +184,7 @@
     </dependency>
 
 <!-- SpockFramkwork -->
+    <!-- Choose Recommendation: Junit or Spock but not both
     <dependency>
       <groupId>org.spockframework</groupId>
       <artifactId>spock-core</artifactId>
@@ -186,6 +197,9 @@
       <version>4.0.18</version>
       <scope>test</scope>
     </dependency>
+  -->
+
+
 
 
   </dependencies>
@@ -215,6 +229,11 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.2.5</version>
         <configuration>
+          <!-- FIX FOR MAC USERS -->
+          <systemPropertyVariables>
+            <java.awt.headless>false</java.awt.headless>
+          </systemPropertyVariables>
+
           <!-- Fix for JavaFX module access issues on JDK 16+ -->
           <argLine>
             --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
@@ -223,6 +242,10 @@
           </argLine>
         </configuration>
       </plugin>
+
+
+
+
 
 
       <!-- JaCoCo Plugin (Optional, for external report) -->
@@ -247,7 +270,6 @@
       </plugin>
 
 
-
       <plugin>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
@@ -258,6 +280,12 @@
             <id>default-cli</id>
             <configuration>
               <mainClass>at.fh.bif.swen.tourplanner.TourPlanerApplication</mainClass>
+              <modules>
+                <module>javafx.controls</module>
+                <module>javafx.fxml</module>
+                <module>javafx.web</module>
+              </modules>
+
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
