consolidation with other branch & running - 2.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.application.name=TourplannerFX
 spring.datasource.url=jdbc:postgresql://localhost:5432/tourplanner_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
- b
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
