--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-web</artifactId>
-      <version>${javafx.version}</version>
+      <version>19.0.2.1</version>
     </dependency>
 
     <dependency>
