--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <mockito.version>5.17.0</mockito.version>
 
     <jacoco.version>0.8.12</jacoco.version>
+    <java.version>21</java.version>
     <javafx.version>21</javafx.version>
   </properties>
 
