--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
       <artifactId>javafx-web</artifactId>
       <version>19.0.2.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${javafx.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>com.itextpdf</groupId>
